allow to change speed

--- a/index.html
+++ b/index.html
@@ -12,6 +12,23 @@
     <div class="grid"></div>
 
     <div>Score: <span id="score">0</span></div>
+    <div>Speed (1-10): <span id="speed">4</span></div>
+    <div>
+      <h2>Controls</h2>
+      <pre class="controls">
+          Game
+-------------------------
+          + = Speed up
+          - = Speed down
+
+         Player 1
+-------------------------
+Arrow left  = turn left
+Arrow right = turn right
+</pre
+      >
+    </div>
+
     <script src="main.js"></script>
   </body>
 </html>
