add multiplayer capability

--- a/index.html
+++ b/index.html
@@ -10,21 +10,18 @@
   <body>
     <h1>Snake</h1>
     <div class="grid"></div>
-
-    <div>Score: <span id="score">0</span></div>
-    <div>Speed (1-10): <span id="speed">4</span></div>
+    <div id="announcement">🚨 Press any players controls to start 🚨</div>
+    <div>Score: <span id="score"></span></div>
+    <div>Speed (1-10): <span id="speed">5</span></div>
     <div>
       <h2>Controls</h2>
       <pre class="controls">
-          Game
--------------------------
-          + = Speed up
-          - = Speed down
-
-         Player 1
--------------------------
-Arrow left  = turn left
-Arrow right = turn right
+        + = Speed up
+        - = Speed down
+ 
+ Player 1 = left, right
+ Player 2 = a, d
+ Player 3 = Numpad 4, Numpad 6
 </pre
       >
     </div>
