--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="grid"></div>
     <div id="announcement">🚨 Press any players controls to start 🚨</div>
     <div>Score: <span id="score"></span></div>
-    <div>Speed (1-10): <span id="speed">5</span></div>
+    <div>Speed: <span id="speed"></span></div>
     <div>
       <h2>Controls</h2>
       <pre class="controls">
